fixed text alignment for featured work block

--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,19 @@ div.markup-image {
   padding-top: 15px;
 }
 
+h3.article-title {
+  text-align: center;
+}
+
+p.description {
+  font-weight: 0.9em;
+  text-align: center;
+}
+
+div.details {
+  text-align: center;
+}
+
 @media screen and (max-width: 480px) {
   body {
     font-size: 10px;
